<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialpad"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_gravity="center_horizontal"    
    android:layout_weight="1" >

    <com.HomeCenter2.ui.DayLayout
        android:id="@+id/cbMonS3"
        style="@style/schedule_linear_day" >

        <TextView
            style="@style/day_textview"
            android:text="@string/mon" />

        <ImageView style="@style/day_view" />
    </com.HomeCenter2.ui.DayLayout>

    <com.HomeCenter2.ui.DayLayout
        android:id="@+id/cbTueS3"
        style="@style/schedule_linear_day" >

        <TextView
            style="@style/day_textview"
            android:text="@string/tue" />

        <ImageView style="@style/day_view" />
    </com.HomeCenter2.ui.DayLayout>

    <com.HomeCenter2.ui.DayLayout
        android:id="@+id/cbWedS3"
        style="@style/schedule_linear_day" >

        <TextView
            style="@style/day_textview"
            android:text="@string/wed" />

        <ImageView style="@style/day_view" />
    </com.HomeCenter2.ui.DayLayout>

    <com.HomeCenter2.ui.DayLayout
        android:id="@+id/cbThuS3"
        style="@style/schedule_linear_day" >

        <TextView
            style="@style/day_textview"
            android:text="@string/thu" />

        <ImageView style="@style/day_view" />
    </com.HomeCenter2.ui.DayLayout>

    <com.HomeCenter2.ui.DayLayout
        android:id="@+id/cbFriS3"
        style="@style/schedule_linear_day" >

        <TextView
            style="@style/day_textview"
            android:text="@string/fri" />

        <ImageView style="@style/day_view" />
    </com.HomeCenter2.ui.DayLayout>

    <com.HomeCenter2.ui.DayLayout
        android:id="@+id/cbSatS3"
        style="@style/schedule_linear_day" >

        <TextView
            style="@style/day_textview"
            android:text="@string/sat" />

        <ImageView style="@style/day_view" />
    </com.HomeCenter2.ui.DayLayout>

    <com.HomeCenter2.ui.DayLayout
        android:id="@+id/cbSunS3"
        style="@style/schedule_linear_day" >

        <TextView
            style="@style/day_textview"
            android:text="@string/sun" />

        <ImageView style="@style/day_view" />
    </com.HomeCenter2.ui.DayLayout>

</LinearLayout>