<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"    
    android:orientation="vertical"
    android:padding="@dimen/main_item_icon_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/margin_group_layout"
            android:layout_marginRight="@dimen/margin_group_layout"
            android:layout_weight="1"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btnSync"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/sync" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_group_layout"
        android:layout_marginRight="@dimen/margin_group_layout" >

        <TextView
            android:id="@+id/tvDay"
            style="@style/schedule_day_textview"
            android:layout_alignBaseline="@+id/editDay"
            android:text="@string/day" />

        <TextView
            android:id="@+id/tvTime"
            style="@style/schedule_day_textview"
            android:layout_alignBaseline="@+id/editTime"
            android:layout_alignBottom="@+id/editTime"
            android:text="@string/time" />

        <EditText
            android:id="@+id/editDay"
            style="@style/schedule_day_edittext"
            android:layout_toRightOf="@+id/tvTime" />

        <EditText
            android:id="@+id/editTime"
            style="@style/schedule_day_edittext"
            android:layout_below="@id/editDay"
            android:layout_toRightOf="@+id/tvTime" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textViewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_group_layout"
        android:layout_marginRight="@dimen/margin_group_layout"
        android:text="@string/account"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_group_layout"
        android:layout_marginRight="@dimen/margin_group_layout"
        android:orientation="vertical" >

        <RelativeLayout style="@style/relative_parameter" >

            <TextView
                android:id="@+id/tvAdminSetting"
                style="@style/txt_parameter"
                android:text="@string/admin"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editAdmin"
                style="@style/edt_parameter"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@+id/tvAdminSetting"
                android:hint="@string/admin"
                android:inputType="textUri"
                android:maxLength="24"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>

        <RelativeLayout style="@style/relative_parameter" >

            <TextView
                android:id="@+id/tvPassword"
                style="@style/txt_parameter"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/editPassword"
                style="@style/edt_parameter"
                android:layout_toRightOf="@+id/tvPassword"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="24"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </EditText>
        </RelativeLayout>

        <CheckBox
            android:id="@+id/cbShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showpw" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewInfomation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_group_layout"
        android:layout_marginRight="@dimen/margin_group_layout"
        android:text="@string/infomation"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_group_layout"
        android:layout_marginRight="@dimen/margin_group_layout"
        android:orientation="vertical" >

        <RelativeLayout style="@style/relative_parameter" >

            <TextView
                android:id="@+id/tvLightLevelTrigger"
                style="@style/txt_parameter"
                android:text="@string/light_level_trigger" />

            <EditText
                android:id="@+id/editLightLevelTrigger"
                style="@style/edt_parameter"
                android:layout_toRightOf="@+id/tvLightLevelTrigger"
                android:inputType="number"
                android:maxLength="1" />
        </RelativeLayout>

        <RelativeLayout style="@style/relative_parameter" >

            <TextView
                android:id="@+id/tvSmokeLevelTrigger"
                style="@style/txt_parameter"
                android:text="@string/smoke_level_trigger" />

            <EditText
                android:id="@+id/editSmokeLevelTrigger"
                style="@style/edt_parameter"
                android:layout_toRightOf="@+id/tvSmokeLevelTrigger"
                android:inputType="number"
                android:maxLength="1" />
        </RelativeLayout>

        <RelativeLayout style="@style/relative_parameter" >

            <TextView
                android:id="@+id/tvTemperatureTrigger"
                style="@style/txt_parameter"
                android:text="@string/temperature_trigger" />

            <EditText
                android:id="@+id/editTemperatureTrigger"
                style="@style/edt_parameter"
                android:layout_toRightOf="@+id/tvTemperatureTrigger"
                android:inputType="number"
                android:maxLength="2" />
        </RelativeLayout>

        <RelativeLayout style="@style/relative_parameter" >

            <TextView
                android:id="@+id/tvPhone01"
                style="@style/txt_parameter"
                android:text="@string/phone01" />

            <EditText
                android:id="@+id/editPhone01"
                style="@style/edt_parameter"
                android:layout_toRightOf="@+id/tvPhone01"
                android:inputType="phone" />
        </RelativeLayout>

        <RelativeLayout style="@style/relative_parameter" >

            <TextView
                android:id="@+id/tvPhone02"
                style="@style/txt_parameter"
                android:text="@string/phone02" />

            <EditText
                android:id="@+id/editPhone02"
                style="@style/edt_parameter"
                android:layout_toRightOf="@+id/tvPhone02"
                android:inputType="phone" />
        </RelativeLayout>

        <RelativeLayout style="@style/relative_parameter" >

            <TextView
                android:id="@+id/tvPhone03"
                style="@style/txt_parameter"
                android:text="@string/phone03" />

            <EditText
                android:id="@+id/editPhone03"
                style="@style/edt_parameter"
                android:layout_toRightOf="@+id/tvPhone03"
                android:inputType="phone" />
        </RelativeLayout>

        <RelativeLayout style="@style/relative_parameter" >

            <TextView
                android:id="@+id/tvGSMMessage"
                style="@style/txt_parameter"
                android:text="@string/gsm_message" />

            <EditText
                android:id="@+id/editGSMMessage"
                style="@style/edt_parameter"
                android:layout_toRightOf="@+id/tvGSMMessage"
                android:maxLength="128" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>