<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp" >

        <CheckBox
            android:id="@+id/cbRemote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/remote" />

        <TextView
            android:id="@+id/tvServerRemote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbRemote"
            android:layout_marginLeft="@dimen/margin_group_layout"
            android:layout_marginRight="@dimen/margin_group_layout"
            android:layout_marginTop="@dimen/login_button_margin"
            android:text="@string/server_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtServerRemote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbRemote"
            android:layout_marginLeft="@dimen/margin_group_layout"
            android:layout_marginRight="@dimen/margin_group_layout"
            android:layout_toRightOf="@+id/tvServerRemote"
            android:ems="10"
            >
        </EditText>

        <TextView
            android:id="@+id/tvPortRemote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvServerRemote"
            android:layout_marginLeft="@dimen/margin_group_layout"
            android:layout_marginRight="@dimen/margin_group_layout"
            android:layout_marginTop="@dimen/login_button_margin"
            android:text="@string/port_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtPortRemote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvServerRemote"
            android:layout_marginBottom="@dimen/login_button_margin"
            android:layout_marginLeft="@dimen/margin_group_layout"
            android:layout_marginRight="@dimen/margin_group_layout"
            android:layout_toRightOf="@+id/tvServerRemote"
            android:ems="10"
            android:inputType="phone" >
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp" >

        <CheckBox
            android:id="@+id/cbLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:text="@string/local" />

        <TextView
            android:id="@+id/tvServerLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbLocal"
            android:layout_marginLeft="@dimen/margin_group_layout"
            android:layout_marginRight="@dimen/margin_group_layout"
            android:layout_marginTop="@dimen/login_button_margin"
            android:text="@string/server_address"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtServerLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cbLocal"
            android:layout_marginLeft="@dimen/margin_group_layout"
            android:layout_marginRight="@dimen/margin_group_layout"
            android:layout_toRightOf="@+id/tvServerLocal"
            android:ems="10"            >
        </EditText>

        <TextView
            android:id="@+id/tvPortLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvServerLocal"
            android:layout_marginLeft="@dimen/margin_group_layout"
            android:layout_marginRight="@dimen/margin_group_layout"
            android:layout_marginTop="@dimen/login_button_margin"
            android:text="@string/port_number"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edtPortLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edtServerLocal"            
            android:layout_marginLeft="@dimen/margin_group_layout"
            android:layout_marginRight="@dimen/margin_group_layout"            
            android:layout_toRightOf="@+id/tvServerLocal"
            android:ems="10"
            android:inputType="phone" >
        </EditText>
    </RelativeLayout>

</LinearLayout>